--- a/references.bib
+++ b/references.bib
@@ -63,3 +63,127 @@ doi = {10.1177/0956797609357751}
   year={1984},
   publisher={Taylor \& Francis}
 }
+
+@article{olsen2006structural,
+  title={Structural equation modeling with interchangeable dyads.},
+  author={Olsen, Joseph A and Kenny, David A},
+  journal={Psychological methods},
+  volume={11},
+  number={2},
+  pages={127},
+  year={2006},
+  publisher={American Psychological Association}
+}
+
+@article{peugh2013analyzing,
+  title={Analyzing mixed-dyadic data using structural equation models},
+  author={Peugh, James L and DiLillo, David and Panuzio, Jillian},
+  journal={Structural Equation Modeling: A Multidisciplinary Journal},
+  volume={20},
+  number={2},
+  pages={314--337},
+  year={2013},
+  publisher={Taylor \& Francis}
+}
+
+@article{Kaschak, title={Engendered lives: a new psychology of womens experience}, volume={30}, DOI={10.5860/choice.30-4102}, number={07}, journal={Choice Reviews Online}, year={1993}}
+@article{robertsfredrickson, title={Objectification Theory}, DOI={10.4135/9781412956253.n377}, journal={Encyclopedia of Social Psychology}, author={Roberts, Tomi-Ann and Fredrickson, Barbara L.}, year={1997}}
+
+@article{swimetal, title={Everyday Sexism: Evidence for Its Incidence, Nature, and Psychological Impact From Three Daily Diary Studies}, volume={57}, DOI={10.1111/0022-4537.00200}, number={1}, journal={Journal of Social Issues}, author={Swim, Janet K. and Hyers, Lauri L. and Cohen, Laurie L. and Ferguson, Melissa J.}, year={2001}, pages={31–53}}
+@article{Bartky, title = {Femininity and Domination Studies in the Phenomenology of Oppression},year = {1990},author = {Sandra Lee Bartky}}
+@article{loughnan2015,
+  title={Exploring the role of culture in sexual objectification: A seven nations study},
+  author={Loughnan, Steve and Fernandez-Campos, Silvia and Vaes, Jeroen and Anjum, Gulnaz and Aziz, Mudassar and Harada, Chika and Holland, Elise and Singh, Indramani and Puvia, Elisa and Tsuchiya, Koji},
+  journal={Revue internationale de psychologie sociale},
+  volume={28},
+  number={1},
+  pages={125--152},
+  year={2015},
+  publisher={Presses universitaires de Grenoble}}
+
+@article{moradi2008,
+  title={Objectification theory and psychology of women: A decade of advances and future directions},
+  author={Moradi, Bonnie and Huang, Yu-Ping},
+  journal={Psychology of women quarterly},
+  volume={32},
+  number={4},
+  pages={377--398},
+  year={2008},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{quinnetal, title={Performance and flow: A review and integration of self-objectification research.}, DOI={10.1037/12304-006}, journal={Self-objectification in women: Causes, consequences, and counteractions.}, author={Quinn, Diane M. and Chaudoir, Stephenie R. and Kallen, Rachel W.}, pages={119–138}, year={2011}}
+
+@article{holland2016,
+  title={Cute little things: The objectification of prepubescent girls},
+  author={Holland, Elise and Haslam, Nick},
+  journal={Psychology of Women Quarterly},
+  volume={40},
+  number={1},
+  pages={108--119},
+  year={2016},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{jongenelis2014,
+  title={Self-objectification, body image disturbance, and eating disorder symptoms in young Australian children},
+  author={Jongenelis, Michelle I and Byrne, Susan M and Pettigrew, Simone},
+  journal={Body Image},
+  volume={11},
+  number={3},
+  pages={290--302},
+  year={2014},
+  publisher={Elsevier}}
+
+@article{bury2016,
+  title={Disclaimer labels on fashion magazine advertisements: Impact on visual attention and relationship with body dissatisfaction},
+  author={Bury, Belinda and Tiggemann, Marika and Slater, Amy},
+  journal={Body Image},
+  volume={16},
+  pages={1--9},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@article{fredricksonetal2011, title={Bringing Back the Body}, volume={35}, DOI={10.1177/0361684311426690}, number={4}, journal={Psychology of Women Quarterly}, author={Fredrickson, Barbara L. and Hendler, Lee Meyerhoff and Nilsen, Stephanie and O’Barr, Jean Fox and Roberts, Tomi-Ann}, year={2011}, pages={689–696}}
+ @article{briton1995,
+  title={Beliefs about female and male nonverbal communication},
+  author={Briton, Nancy J and Hall, Judith A},
+  journal={Sex Roles},
+  volume={32},
+  number={1-2},
+  pages={79--90},
+  year={1995},
+  publisher={Springer}
+}
+@article{rubin1975, title={What the "Good Language Learner" Can Teach Us}, volume={9}, DOI={10.2307/3586011}, number={1}, journal={TESOL Quarterly}, author={Rubin, Joan}, year={1975}, pages={41}}
+@article{argyle1969,
+  title={Observer or observed? A reversible perspective in person perception},
+  author={Argyle, Michael and Williams, Marylin},
+  journal={Sociometry},
+  pages={396--412},
+  year={1969},
+  publisher={JSTOR}
+}
+@article{berger1972,
+  title={Status characteristics and social interaction},
+  author={Berger, Joseph and Cohen, Bernard P and Zelditch Jr, Morris},
+  journal={American Sociological Review},
+  pages={241--255},
+  year={1972},
+  publisher={JSTOR}
+}
+
+@article{frasernicholson1989, title={Social Criticism without Philosophy: An Encounter between Feminism and Postmodernism}, DOI={10.2307/827810}, number={21}, journal={Social Text}, author={Fraser, Nancy and Nicholson, Linda}, year={1989}, pages={83}}
+
+
+@book{calogero2011,
+  title={Self-objectification in women: Causes, consequences, and counteractions.},
+  author={Calogero, Rachel M and Tantleff-Dunn, Stacey Ed and Thompson, J},
+  year={2011},
+  publisher={American Psychological Association}
+}
+
+@article{brunelletal2010, title={Dispositional authenticity and romantic relationship functioning}, volume={48}, DOI={10.1016/j.paid.2010.02.018}, number={8}, journal={Personality and Individual Differences}, author={Brunell, Amy B. and Kernis, Michael H. and Goldman, Brian M. and Heppner, Whitney and Davis, Patricia and Cascio, Edward V. and Webster, Gregory D.}, year={2010}, pages={900–905}}
+
+@book{young1979, title={Proceedings of The Second Sex—Thirty Years Later: A Commemorative Conference on Feminist Theory,}, author={Young, Iris Marion}, year={1979}}
