--- a/Manuscript data.Rmd
+++ b/Manuscript data.Rmd
@@ -15,6 +15,7 @@ library(mosaic)
 library(tidyr)
 library(dplyr)
 library(irr)
+library(lavaan)
 select <- dplyr::select
 ```
 
@@ -34,7 +35,7 @@ clark<- clark_final %>%
   filter(dyadID!=4, dyadID!=14, dyadID!=19) %>%
   arrange(dyadID) %>%
   mutate(person=rep(1:2, times=22)) %>%
-  select(dyadID, person, partID, gender, age, race, sexor, physanx, a2pSOO, metaSOO, trigram_score, authenticity, howbody_avg, relag, careerasp, TSO, avg_sexism, sexism_logel, satisfaction) %>%
+  select(dyadID, person, partID, gender, age, race, sexor, a2pSOO, metaSOO, trigram_score, authenticity, howbody_avg, relag, careerasp, TSO, avg_sexism, sexism_logel) %>%
   arrange(person)
 
 
@@ -83,7 +84,7 @@ smith <- smith_final %>%
   mutate(person=rep(1:2, times=23),
          partID= ifelse(dyadID==31 & person==2, 83, partID),
          dyadID= ifelse(dyadID==2 & partID==4|partID==5, 1, dyadID)) %>%
-  select(dyadID, person, partID, gender, age, race, sexor, physanx, a2pSOO, metaSOO, trigram_score, authenticity, howbody_avg, relag, careerasp, TSO, avg_sexism, sexism_logel, satisfaction)  %>%
+  select(dyadID, person, partID, gender, age, race, sexor,a2pSOO, metaSOO, trigram_score, authenticity, howbody_avg, relag, careerasp, TSO, avg_sexism, sexism_logel)  %>%
   arrange(person)
 
 tempA <- smith %>% 
@@ -113,7 +114,7 @@ head(smith_pair)
 Next steps: correlations, matrices etc
 ```{r}
 #Make pairwise data numeric
-x <- 1:39
+x <- 1:35
 smith_pair[,x] <- lapply(smith_pair[,x], as.numeric)
 clark_pair[,x] <-lapply(clark_pair[,x], as.numeric)
 
@@ -176,6 +177,10 @@ summary(apim_women)
 
 ```
 
+#Writing a csv of clarksmith_women data
+```{r}
+write.csv(clarksmith_women, "Cleaned data/clarksmith_women.csv")
+```
 
 ##Descriptive stats
 ```{r}
@@ -246,8 +251,8 @@ dyad_cswomen <- clarksmith_women %>%
 
 ```{r}
 model <- '#####regressions 
-howbody_avg_A ~ t*TSO_A + a*a2pSOO_A + b*a2pSOO_P
-howbody_avg_P ~ t*TSO_P + a*a2pSOO_P + b*a2pSOO_A
+howbody_avg_A ~ t*TSO_A + a*a2pSOO_A + b*a2pSOO_P + c*TSO_A_SOO_P
+howbody_avg_P ~ t*TSO_P + a*a2pSOO_P + b*a2pSOO_A + c*TSO_P_SOO_A
 authenticity_A ~ d*howbody_avg_A
 authenticity_P ~ d*howbody_avg_P
 trigram_score_A ~ e1*authenticity_A
@@ -311,13 +316,407 @@ TSO_A ~~ c3*a2pSOO_P
 TSO_P ~~ c3*a2pSOO_A
 TSO_A ~~ c4*a2pSOO_A
 TSO_P ~~ c4*a2pSOO_P
+TSO_A_SOO_P ~~ c5*a2pSOO_A
+TSO_P_SOO_A ~~ c5*a2pSOO_P
+TSO_A_SOO_P ~~ c6*TSO_P
+TSO_P_SOO_A ~~ c6*TSO_A
 '
+```
 
-fit <- sem(model, data=dyad_cswomen)
-summary(fit)
+```{r}
+isatmodel <- '#####regressions 
+#Part one/two
+howbody_avg_A ~~ t*TSO_A
+howbody_avg_A ~~ a*a2pSOO_A
+howbody_avg_A ~~ b*a2pSOO_P 
+howbody_avg_A ~~ c*TSO_A_SOO_P
+
+howbody_avg_P ~~ t*TSO_P
+howbody_avg_P ~~ a*a2pSOO_P 
+howbody_avg_P ~~ b*a2pSOO_A 
+howbody_avg_P ~~ c*TSO_P_SOO_A
+
+TSO_A ~~ f*howbody_avg_P
+TSO_P ~~ f*howbody_avg_A
+TSO_A_SOO_P ~~ g*howbody_avg_P
+TSO_P_SOO_A ~~ g*howbody_avg_A
+
+#Part two/three
+authenticity_A ~~ d*howbody_avg_A
+authenticity_P ~~ d*howbody_avg_P
+howbody_avg_A ~~ h*authenticity_P
+howbody_avg_P ~~ h*authenticity_A
+
+
+#Part three/four
+trigram_score_A ~~ e1*authenticity_A
+trigram_score_P ~~ e1*authenticity_P
+careerasp_A ~~ e2*authenticity_A
+careerasp_P ~~ e2*authenticity_P
+relag_A ~~ e3*authenticity_A
+relag_P ~~ e3*authenticity_P
+trigram_score_A ~~ e4*relag_P
+trigram_score_P ~~ e4*relag_A
+trigram_score_A ~~ e5*careerasp_P
+trigram_score_P ~~ e5*careerasp_A
+trigram_score_A ~~ e6*trigram_score_P
+#trigram_score_P ~~ e6*trigram_score_A
+careerasp_A ~~ e7*relag_P
+careerasp_P ~~ e7*relag_A
+careerasp_A ~~ e8*careerasp_P
+#careerasp_A ~~ e9*trigram_score_P
+#careerasp_P ~~ e9*trigram_score_A
+relag_A ~~ e10*relag_P
+
+#One to three
+#direct actor effects
+authenticity_A ~~ k1*TSO_A_SOO_P
+authenticity_P ~~ k1*TSO_P_SOO_A
+authenticity_A ~~ k2*TSO_A
+authenticity_P ~~ k2*TSO_P
+authenticity_A ~~k3*a2pSOO_A
+authenticity_P ~~k3*a2pSOO_P
+
+#direct partner effects
+authenticity_A ~~ k4*TSO_P_SOO_A
+authenticity_P ~~k4*TSO_A_SOO_P
+authenticity_A ~~ k5*TSO_P
+authenticity_P ~~ k5*TSO_A
+authenticity_A ~~ k6*a2pSOO_P
+authenticity_P ~~ k6*a2pSOO_A
+
+#One to four
+#Direct actor effects
+trigram_score_A ~~ l1*TSO_A_SOO_P
+trigram_score_P ~~ l1*TSO_P_SOO_A
+trigram_score_A ~~ l2*TSO_A
+trigram_score_P ~~ l2*TSO_P
+trigram_score_A ~~ l3*a2pSOO_A
+trigram_score_P ~~ l3*a2pSOO_P
+careerasp_A ~~ l4*TSO_A_SOO_P
+careerasp_P ~~ l4*TSO_P_SOO_A
+careerasp_A ~~ l5*TSO_A
+careerasp_P ~~ l5*TSO_P
+careerasp_A ~~ l6*a2pSOO_A
+careerasp_P ~~ l6*a2pSOO_P
+relag_A ~~ l7*TSO_A_SOO_P
+relag_P ~~ l7*TSO_P_SOO_A
+relag_A ~~ l8*TSO_A
+relag_P ~~ l8*TSO_P
+relag_A ~~ l9*a2pSOO_A
+relag_P ~~ l9*a2pSOO_P
+
+#direct partner effects
+trigram_score_A ~~ m1*TSO_P_SOO_A
+trigram_score_P ~~ m1*TSO_A_SOO_P
+trigram_score_A ~~ m2*TSO_P
+trigram_score_P ~~ m2*TSO_A
+trigram_score_A ~~ m3*a2pSOO_P
+trigram_score_P ~~ m3*a2pSOO_A
+careerasp_A ~~ m4*TSO_P_SOO_A
+careerasp_P ~~ m4*TSO_A_SOO_P
+careerasp_A ~~ m5*TSO_P
+careerasp_P ~~ m5*TSO_A
+careerasp_A ~~ m6*a2pSOO_P
+careerasp_P ~~ m6*a2pSOO_A
+relag_A ~~ m7*TSO_P_SOO_A
+relag_P ~~ m7*TSO_A_SOO_P
+relag_A ~~ m8*TSO_P
+relag_P ~~ m8*TSO_A
+relag_A ~~ m9*a2pSOO_P
+relag_P ~~ m9*a2pSOO_A
+
+#Two to four
+#direct actor effects
+trigram_score_A ~~ o1*howbody_avg_A
+trigram_score_P ~~ o1*howbody_avg_P
+careerasp_A ~~ o2*howbody_avg_A
+careerasp_P ~~ o2*howbody_avg_P
+relag_A ~~ o3*howbody_avg_A
+relag_P ~~ o3*howbody_avg_P
+
+#direct partner effects
+trigram_score_A ~~ o1*howbody_avg_P
+trigram_score_P ~~ o1*howbody_avg_A
+careerasp_A ~~ o2*howbody_avg_P
+careerasp_P ~~ o2*howbody_avg_A
+relag_A ~~ o3*howbody_avg_P
+relag_P ~~ o3*howbody_avg_A
+
+
+######covariances
+#endogenous
+howbody_avg_A ~~ howbody_avg_P
+authenticity_A ~~ authenticity_P
+#trigram_score_A ~~ trigram_score_P
+#careerasp_A ~~ careerasp_P
+#relag_A ~~ relag_P
+trigram_score_A ~~ q1*careerasp_A 
+trigram_score_A ~~ q2*relag_A
+
+careerasp_A ~~ q3*relag_A
+
+trigram_score_P ~~ q1*careerasp_P
+trigram_score_P ~~ q2*relag_P
+
+careerasp_P ~~ q3*relag_P
+
+trigram_score_A ~~ q4*careerasp_P
+trigram_score_A ~~ q5*relag_P
+
+
+trigram_score_P ~~ q4*careerasp_A
+trigram_score_P ~~ q5*relag_A
+
+careerasp_A ~~ q6*relag_P
+careerasp_P ~~ q6*relag_A
+
+
+#####variances
+howbody_avg_A ~~ v1*howbody_avg_A
+howbody_avg_P ~~ v1*howbody_avg_P
+TSO_A ~~ v2*TSO_A
+TSO_P ~~ v2*TSO_P
+a2pSOO_A ~~ v3*a2pSOO_A
+a2pSOO_P ~~ v3*a2pSOO_P
+authenticity_A ~~ v4*authenticity_A
+authenticity_P ~~ v4*authenticity_P
+##endogenous intercepts
+howbody_avg_A ~ i*1
+howbody_avg_P ~ i*1
+authenticity_A ~ i2*1
+authenticity_P ~ i2*1
+trigram_score_A ~ i3*1
+trigram_score_P ~ i4*1
+careerasp_A ~ i5*1
+careerasp_P ~ i5*1
+relag_A ~ i6*1
+relag_P ~ i6*1
+##exogenous means
+TSO_A ~ m*1
+TSO_P ~ m*1
+a2pSOO_A ~ m2*1
+a2pSOO_P ~ m2*1
+TSO_P_SOO_A ~ m3*1
+TSO_A_SOO_P ~ m3*1
+## exogenous covariances
+TSO_A_SOO_P ~~ l1*TSO_A
+TSO_P_SOO_A ~~ l1*TSO_P
+TSO_A_SOO_P ~~ l2*a2pSOO_P
+TSO_P_SOO_A ~~ l2*a2pSOO_A
+TSO_A ~~ l3*a2pSOO_P
+TSO_P ~~ l3*a2pSOO_A
+TSO_A ~~ l4*a2pSOO_A
+TSO_P ~~ l4*a2pSOO_P
+TSO_A_SOO_P ~~ l5*a2pSOO_A
+TSO_P_SOO_A ~~ l5*a2pSOO_P
+TSO_A_SOO_P ~~ l6*TSO_P
+TSO_P_SOO_A ~~ l6*TSO_A
+'
+```
+
+```{r}
+nullmodel <- '#####regressions 
+#Part one/two
+howbody_avg_A ~~ 0*TSO_A
+howbody_avg_A ~~ 0*a2pSOO_A
+howbody_avg_A ~~ 0*a2pSOO_P 
+howbody_avg_A ~~ 0*TSO_A_SOO_P
+
+howbody_avg_P ~~ 0*TSO_P
+howbody_avg_P ~~ 0*a2pSOO_P 
+howbody_avg_P ~~ 0*a2pSOO_A 
+howbody_avg_P ~~ 0*TSO_P_SOO_A
+
+TSO_A ~~ 0*howbody_avg_P
+TSO_P ~~ 0*howbody_avg_A
+TSO_A_SOO_P ~~ 0*howbody_avg_P
+TSO_P_SOO_A ~~ 0*howbody_avg_A
+
+#Part two/three
+authenticity_A ~~ 0*howbody_avg_A
+authenticity_P ~~ 0*howbody_avg_P
+howbody_avg_A ~~ 0*authenticity_P
+howbody_avg_P ~~ 0*authenticity_A
+
+
+#Part three/four
+trigram_score_A ~~ 0*authenticity_A
+trigram_score_P ~~ 0*authenticity_P
+careerasp_A ~~ 0*authenticity_A
+careerasp_P ~~ 0*authenticity_P
+relag_A ~~ 0*authenticity_A
+relag_P ~~ 0*authenticity_P
+trigram_score_A ~~ 0*relag_P
+trigram_score_P ~~ 0*relag_A
+trigram_score_A ~~ 0*careerasp_P
+trigram_score_P ~~ 0*careerasp_A
+trigram_score_A ~~ e6*trigram_score_P
+#trigram_score_P ~~ e6*trigram_score_A
+careerasp_A ~~ 0*relag_P
+careerasp_P ~~ 0*relag_A
+careerasp_A ~~ e8*careerasp_P
+#careerasp_A ~~ 0*trigram_score_P
+#careerasp_P ~~ 0*trigram_score_A
+relag_A ~~ e10*relag_P
+
+#One to three
+#direct actor effects
+authenticity_A ~~ 0*TSO_A_SOO_P
+authenticity_P ~~ 0*TSO_P_SOO_A
+authenticity_A ~~ 0*TSO_A
+authenticity_P ~~ 0*TSO_P
+authenticity_A ~~0*a2pSOO_A
+authenticity_P ~~ 0*a2pSOO_P
+
+#direct partner effects
+authenticity_A ~~ 0*TSO_P_SOO_A
+authenticity_P ~~ 0*TSO_A_SOO_P
+authenticity_A ~~ 0*TSO_P
+authenticity_P ~~ 0*TSO_A
+authenticity_A ~~ 0*a2pSOO_P
+authenticity_P ~~ 0*a2pSOO_A
+
+#One to four
+#Direct actor effects
+trigram_score_A ~~ 0*TSO_A_SOO_P
+trigram_score_P ~~ 0*TSO_P_SOO_A
+trigram_score_A ~~ 0*TSO_A
+trigram_score_P ~~ 0*TSO_P
+trigram_score_A ~~ 0*a2pSOO_A
+trigram_score_P ~~ 0*a2pSOO_P
+careerasp_A ~~ 0*TSO_A_SOO_P
+careerasp_P ~~ 0*TSO_P_SOO_A
+careerasp_A ~~ 0*TSO_A
+careerasp_P ~~ 0*TSO_P
+careerasp_A ~~ 0*a2pSOO_A
+careerasp_P ~~ 0*a2pSOO_P
+relag_A ~~ 0*TSO_A_SOO_P
+relag_P ~~ 0*TSO_P_SOO_A
+relag_A ~~ 0*TSO_A
+relag_P ~~ 0*TSO_P
+relag_A ~~ 0*a2pSOO_A
+relag_P ~~ 0*a2pSOO_P
+
+#direct partner effects
+trigram_score_A ~~ 0*TSO_P_SOO_A
+trigram_score_P ~~ 0*TSO_A_SOO_P
+trigram_score_A ~~ 0*TSO_P
+trigram_score_P ~~ 0*TSO_A
+trigram_score_A ~~ 0*a2pSOO_P
+trigram_score_P ~~ 0*a2pSOO_A
+careerasp_A ~~ 0*TSO_P_SOO_A
+careerasp_P ~~ 0*TSO_A_SOO_P
+careerasp_A ~~ 0*TSO_P
+careerasp_P ~~ 0*TSO_A
+careerasp_A ~~ 0*a2pSOO_P
+careerasp_P ~~ 0*a2pSOO_A
+relag_A ~~ 0*TSO_P_SOO_A
+relag_P ~~ 0*TSO_A_SOO_P
+relag_A ~~ 0*TSO_P
+relag_P ~~ 0*TSO_A
+relag_A ~~ 0*a2pSOO_P
+relag_P ~~ 0*a2pSOO_A
+
+#Two to four
+#direct actor effects
+trigram_score_A ~~ 0*howbody_avg_A
+trigram_score_P ~~ 0*howbody_avg_P
+careerasp_A ~~ 0*howbody_avg_A
+careerasp_P ~~ 0*howbody_avg_P
+relag_A ~~ 0*howbody_avg_A
+relag_P ~~ 0*howbody_avg_P
+
+#direct partner effects
+trigram_score_A ~~ 0*howbody_avg_P
+trigram_score_P ~~ 0*howbody_avg_A
+careerasp_A ~~ 0*howbody_avg_P
+careerasp_P ~~ 0*howbody_avg_A
+relag_A ~~ 0*howbody_avg_P
+relag_P ~~ 0*howbody_avg_A
+
+
+######covariances
+#endogenous
+howbody_avg_A ~~ 0*howbody_avg_P
+authenticity_A ~~ 0*authenticity_P
+#trigram_score_A ~~ 0*trigram_score_P
+#careerasp_A ~~ 0*careerasp_P
+trigram_score_A ~~ 0*careerasp_A 
+trigram_score_A ~~ 0*relag_A
+
+careerasp_A ~~ 0*relag_A
+
+trigram_score_P ~~ 0*careerasp_P
+trigram_score_P ~~ 0*relag_P
+
+careerasp_P ~~ 0*relag_P
+
+trigram_score_A ~~ 0*careerasp_P
+trigram_score_A ~~ 0*relag_P
+
+
+trigram_score_P ~~ 0*careerasp_A
+trigram_score_P ~~ 0*relag_A
+
+careerasp_A ~~ 0*relag_P
+careerasp_P ~~ 0*relag_A
+
+
+#####variances
+howbody_avg_A ~~ v1*howbody_avg_A
+howbody_avg_P ~~ v1*howbody_avg_P
+TSO_A ~~ v2*TSO_A
+TSO_P ~~ v2*TSO_P
+a2pSOO_A ~~ v3*a2pSOO_A
+a2pSOO_P ~~ v3*a2pSOO_P
+authenticity_A ~~ v4*authenticity_A
+authenticity_P ~~ v4*authenticity_P
+##endogenous intercepts
+howbody_avg_A ~ i*1
+howbody_avg_P ~ i*1
+authenticity_A ~ i2*1
+authenticity_P ~ i2*1
+trigram_score_A ~ i3*1
+trigram_score_P ~ i4*1
+careerasp_A ~ i5*1
+careerasp_P ~ i5*1
+relag_A ~ i6*1
+relag_P ~ i6*1
+##exogenous means
+TSO_A ~ m*1
+TSO_P ~ m*1
+a2pSOO_A ~ m2*1
+a2pSOO_P ~ m2*1
+TSO_P_SOO_A ~ m3*1
+TSO_A_SOO_P ~ m3*1
+## exogenous covariances
+TSO_A_SOO_P ~~ 0*TSO_A
+TSO_P_SOO_A ~~ 0*TSO_P
+TSO_A_SOO_P ~~ 0*a2pSOO_P
+TSO_P_SOO_A ~~ 0*a2pSOO_A
+TSO_A ~~ 0*a2pSOO_P
+TSO_P ~~ 0*a2pSOO_A
+TSO_A ~~ 0*a2pSOO_A
+TSO_P ~~ 0*a2pSOO_P
+TSO_A_SOO_P ~~ 0*a2pSOO_A
+TSO_P_SOO_A ~~ 0*a2pSOO_P
+TSO_A_SOO_P ~~ 0*TSO_P
+TSO_P_SOO_A ~~ 0*TSO_A
+'
 ```
 
 
+```{r}
+fit <- sem(isatmodel, data=dyad_cswomen)
+summary(fit, standardized=TRUE)
+
+fit2 <- sem(model, data=dyad_cswomen)
+summary(fit2, standardized=TRUE)
+
+fit3 <- sem(nullmodel, data=dyad_cswomen)
+summary(fit3, standardized=TRUE)
+```
 
 
 
