--- a/r-references.bib
+++ b/r-references.bib
@@ -20,3 +20,192 @@
   note = {R package version 0.7.8},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
+@Manual{R-apaTables,
+  title = {apaTables: Create American Psychological Association (APA) Style Tables},
+  author = {David Stanley},
+  year = {2018},
+  note = {R package version 2.0.5},
+  url = {https://CRAN.R-project.org/package=apaTables},
+}
+@Manual{R-devtools,
+  title = {devtools: Tools to Make Developing R Packages Easier},
+  author = {Hadley Wickham and Jim Hester and Winston Chang},
+  year = {2018},
+  note = {R package version 2.0.1},
+  url = {https://CRAN.R-project.org/package=devtools},
+}
+@Manual{R-ggformula,
+  title = {ggformula: Formula Interface to the Grammar of Graphics},
+  author = {Daniel Kaplan and Randall Pruim},
+  year = {2017},
+  note = {R package version 0.6},
+  url = {https://CRAN.R-project.org/package=ggformula},
+}
+@Book{R-ggplot2,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  year = {2016},
+  isbn = {978-3-319-24277-4},
+  url = {https://ggplot2.tidyverse.org},
+}
+@Manual{R-haven,
+  title = {haven: Import and Export 'SPSS', 'Stata' and 'SAS' Files},
+  author = {Hadley Wickham and Evan Miller},
+  year = {2019},
+  note = {R package version 2.1.0},
+  url = {https://CRAN.R-project.org/package=haven},
+}
+@Manual{R-irr,
+  title = {irr: Various Coefficients of Interrater Reliability and Agreement},
+  author = {Matthias Gamer and Jim Lemon and Ian Fellows Puspendra Singh <puspendra.pusp22@gmail.com>},
+  year = {2012},
+  note = {R package version 0.84},
+  url = {https://CRAN.R-project.org/package=irr},
+}
+@Book{R-lattice,
+  title = {Lattice: Multivariate Data Visualization with R},
+  author = {Deepayan Sarkar},
+  publisher = {Springer},
+  address = {New York},
+  year = {2008},
+  note = {ISBN 978-0-387-75968-5},
+  url = {http://lmdvr.r-forge.r-project.org},
+}
+@Manual{R-lpSolve,
+  title = {lpSolve: Interface to 'Lp_solve' v. 5.5 to Solve Linear/Integer Programs},
+  author = {Michel Berkelaar and {others}},
+  year = {2015},
+  note = {R package version 5.6.13},
+  url = {https://CRAN.R-project.org/package=lpSolve},
+}
+@Manual{R-Matrix,
+  title = {Matrix: Sparse and Dense Matrix Classes and Methods},
+  author = {Douglas Bates and Martin Maechler},
+  year = {2017},
+  note = {R package version 1.2-10},
+  url = {https://CRAN.R-project.org/package=Matrix},
+}
+@Article{R-mosaic,
+  author = {Randall Pruim and Daniel T Kaplan and Nicholas J Horton},
+  title = {The mosaic Package: Helping Students to 'Think with Data' Using R},
+  journal = {The R Journal},
+  volume = {9},
+  number = {1},
+  pages = {77--102},
+  year = {2017},
+  url = {https://journal.r-project.org/archive/2017/RJ-2017-024/index.html},
+}
+@Manual{R-mosaicData,
+  title = {mosaicData: Project MOSAIC Data Sets},
+  author = {Randall Pruim and Daniel Kaplan and Nicholas Horton},
+  year = {2016},
+  note = {R package version 0.14.0},
+  url = {https://CRAN.R-project.org/package=mosaicData},
+}
+@Manual{R-nlme,
+  title = {{nlme}: Linear and Nonlinear Mixed Effects Models},
+  author = {Jose Pinheiro and Douglas Bates and Saikat DebRoy and Deepayan Sarkar and {R Core Team}},
+  year = {2017},
+  note = {R package version 3.1-131},
+  url = {https://CRAN.R-project.org/package=nlme},
+}
+@Manual{R-psych,
+  title = {psych: Procedures for Psychological, Psychometric, and Personality Research},
+  author = {William Revelle},
+  organization = { Northwestern University},
+  address = { Evanston, Illinois},
+  year = {2017},
+  note = {R package version 1.7.8},
+  url = {https://CRAN.R-project.org/package=psych},
+}
+@Manual{R-tidyr,
+  title = {tidyr: Easily Tidy Data with 'spread()' and 'gather()' Functions},
+  author = {Hadley Wickham and Lionel Henry},
+  year = {2019},
+  note = {R package version 0.8.3},
+  url = {https://CRAN.R-project.org/package=tidyr},
+}
+@Manual{R-usethis,
+  title = {usethis: Automate Package and Project Setup},
+  author = {Hadley Wickham and Jennifer Bryan},
+  year = {2018},
+  note = {R package version 1.4.0},
+  url = {https://CRAN.R-project.org/package=usethis},
+}
+@Book{R-knitr,
+  title = {Dynamic Documents with {R} and knitr},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  address = {Boca Raton, Florida},
+  year = {2015},
+  edition = {2nd},
+  note = {ISBN 978-1498716963},
+  url = {https://yihui.name/knitr/},
+}
+@Manual{R-forcats,
+  title = {forcats: Tools for Working with Categorical Variables (Factors)},
+  author = {Hadley Wickham},
+  year = {2018},
+  note = {R package version 0.3.0},
+  url = {https://CRAN.R-project.org/package=forcats},
+}
+@Manual{R-kutils,
+  title = {kutils: Project Management Tools},
+  author = {Paul Johnson and Benjamin Kite and Charles Redmon},
+  year = {2019},
+  note = {R package version 1.67},
+  url = {https://CRAN.R-project.org/package=kutils},
+}
+@Article{R-lavaan,
+  title = {{lavaan}: An {R} Package for Structural Equation Modeling},
+  author = {Yves Rosseel},
+  journal = {Journal of Statistical Software},
+  year = {2012},
+  volume = {48},
+  number = {2},
+  pages = {1--36},
+  url = {http://www.jstatsoft.org/v48/i02/},
+}
+@Manual{R-purrr,
+  title = {purrr: Functional Programming Tools},
+  author = {Lionel Henry and Hadley Wickham},
+  year = {2019},
+  note = {R package version 0.3.2},
+  url = {https://CRAN.R-project.org/package=purrr},
+}
+@Manual{R-readr,
+  title = {readr: Read Rectangular Text Data},
+  author = {Hadley Wickham and Jim Hester and Romain Francois},
+  year = {2017},
+  note = {R package version 1.1.1},
+  url = {https://CRAN.R-project.org/package=readr},
+}
+@Manual{R-stringr,
+  title = {stringr: Simple, Consistent Wrappers for Common String Operations},
+  author = {Hadley Wickham},
+  year = {2019},
+  note = {R package version 1.4.0},
+  url = {https://CRAN.R-project.org/package=stringr},
+}
+@Manual{R-tibble,
+  title = {tibble: Simple Data Frames},
+  author = {Kirill Müller and Hadley Wickham},
+  year = {2019},
+  note = {R package version 2.1.1},
+  url = {https://CRAN.R-project.org/package=tibble},
+}
+@Manual{R-tidyverse,
+  title = {tidyverse: Easily Install and Load the 'Tidyverse'},
+  author = {Hadley Wickham},
+  year = {2017},
+  note = {R package version 1.2.1},
+  url = {https://CRAN.R-project.org/package=tidyverse},
+}
+@Manual{R-xtable,
+  title = {xtable: Export Tables to LaTeX or HTML},
+  author = {David B. Dahl and David Scott and Charles Roosen and Arni Magnusson and Jonathan Swinton},
+  year = {2019},
+  note = {R package version 1.8-4},
+  url = {https://CRAN.R-project.org/package=xtable},
+}
